z-index fix

--- a/assets/styling/main.sass
+++ b/assets/styling/main.sass
@@ -115,7 +115,7 @@ img[lazy="loaded"]
           position: relative
           display: flex
           align-items: center
-          z-index: $zindex-projects
+          z-index: $zindex-header
           background: white
           border-top: 1px currentColor solid
           .list-Details
